@@ -4,6 +4,15 @@ SVN $URL$
 Tag Creator: mlevy
 Developers:  klindsay
 Tag Date:    27 Feb 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227a
+Tag Summary: P_iron remin is not always computed correctly
+
+Files Modified:
+M       source/ecosys_mod.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  klindsay
+Tag Date:    27 Feb 2014
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140227
 Tag Summary: Ecosys diagnostics didn't initialize P_iron%sed_loss to zero and
              had incorrect units for pfeToSed variable.
